<resources>
    <string name="app_name">Quiz Fox</string>
    <string name="ourbest">Our Best Quizzes</string>
    <string name="quiz">Quiz</string>
    <string name="profile">Profile</string>
    <string name="wishlist">Wishlist</string>
    <string name="answer">Answer</string>
    <string name="play">Play</string>
    <string name="summary">Summary</string>
    <string name="latestquizes">Latest Quizzes</string>
    <string name="trending">Trending Quizzes</string>
    <string name="topfreequizzes">Top Free Quizzes</string>
    <string name="newquizzes">New Quizzes</string>
    <string name="toppremium">Top Premium Quizzes</string>
    <string name="premium">Premium Quizzes</string>
    <string name="bestranking">Best Ranking Quizzes</string>
    <string name="bestrated">Best Rated Quizzes</string>
    <string name="search">Search Quiz</string>
    <string name="categories">Categories</string>
    <string name="login">Login</string>
    <string name="signout">Sign Out</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="forgot">Forgot Password</string>
    <string name="score">Score</string>
    <string name="password">Password</string>
    <string name="buynow">BUY NOW</string>
    <string name="buycoins">Buy Coins</string>
    <string name="discover">Discover</string>
    <string name="myquizzes">My Quizzes</string>
    <string name="remove">REMOVE</string>
    <string name="cart">Cart</string>
    <string name="reveal">Reveal</string>
    <string name="price">Price</string>
    <string name="free">Free</string>
    <string name="sendfeedback">Send Feedback</string>
    <string name="watchreveal">Watch video to reveal</string>
    <string name="revealfor">Reveal for 200 coins</string>
    <string name="becomeaninstructor">Become an Instructor</string>
    <string name="review">Write a review(optional)</string>
    <string name="sharetoearn">Share to earn 10 Coins @</string>


    <string name="psalms">Whoever dwells in the shelter of the Most High
    will rest in the shadow of the Almighty.[a]
2
I will say of the Lord, “He is my refuge and my fortress,
    my God, in whom I trust.”

3
Surely he will save you
    from the fowler’s snare
    and from the deadly pestilence.
4
He will cover you with his feathers,
    and under his wings you will find refuge;
    his faithfulness will be your shield and rampart.”</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>