<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <View
            android:background="@color/secondaryColor"
            android:id="@+id/rect_view"
            android:layout_height="42dp"
            android:layout_width="6dp"/>


        <TextView
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_width="wrap_content"
            android:text="@string/login"
            android:textColor="@color/primaryColor"
            android:textScaleX="1"
            android:textSize="26sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username_layout"
        android:layout_below="@+id/linear_layout"
        android:layout_height="60dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent">

        <EditText
            android:hint="@string/email"
            android:id="@+id/et_emailli"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="16sp"
            app:theme="@style/EditTextStyle"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/login_psd_layout"
        android:layout_alignLeft="@+id/login_username_layout"
        android:layout_alignRight="@+id/login_username_layout"
        android:layout_below="@+id/login_username_layout"
        android:layout_height="60dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent">


        <EditText
            android:hint="@string/password"
            android:id="@+id/et_passwordli"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="18sp"
            app:theme="@style/EditTextStyle"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginbtn2"
        android:background="@drawable/btn_normal"
        android:gravity="center"
        android:layout_below="@+id/login_psd_layout"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_width="160dp"
        android:text="@string/login"
        android:onClick="login"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/loginbtn"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:backgroundTint="@color/redday"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:text="@string/forgot"
        android:textColor="@color/white"
        android:textSize="15sp"/>

</RelativeLayout>