<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="@color/primaryColor"
    android:orientation="vertical"
    android:visibility="gone">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/rect_view_2"
            android:layout_width="6dp"
            android:layout_height="42dp"
            android:background="@color/white"/>


        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="36dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/tv_register"
            android:layout_centerInParent="true"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:src="@drawable/ic_close"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="18sp"
            app:theme="@style/ReEditTextStyle"/>
    </com.google.android.material.textfield.TextInputLayout>>

    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/psd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_layout"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="18sp"
            app:theme="@style/ReEditTextStyle"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/repeat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/psd_layout"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/et_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register"
            android:inputType="textPassword"
            android:textSize="18sp"
            app:theme="@style/ReEditTextStyle"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username_layout"
        android:layout_alignRight="@+id/username_layout"
        android:layout_below="@id/repeat_layout"
        android:layout_marginTop="14dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/primaryLightColor"/>

</RelativeLayout>
