<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragdiscid"
    android:paddingTop="0dp"
    tools:context=".fragmentDiscover">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rel0"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:paddingTop="0dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/text_viewgfh_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="20dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclecateg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/withover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/rel0"
                android:text="...with over 100 quizzes"
                android:layout_margin="10dp"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/rel1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/withover"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topfreequizzes"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/rel1"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-6920260159880773/2085239412">
            </com.google.android.gms.ads.AdView>
            <LinearLayout
                android:id="@+id/rel2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/adView1"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trending"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/rel2"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-6920260159880773/5466721859"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            </com.google.android.gms.ads.AdView>
            <LinearLayout
                android:id="@+id/rel3"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/adView2"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bestrated"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/rel3"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-6920260159880773/3964818364">
            </com.google.android.gms.ads.AdView>
            <LinearLayout
                android:id="@+id/rel4"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/adView3"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latestquizes"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/rel4"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-6920260159880773/7712491683">
            </com.google.android.gms.ads.AdView>

        </RelativeLayout>
    </ScrollView>


</FrameLayout>